[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["ethanabrooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.9.1"
apache-beam = "^2.40.0"
tensorflow-datasets = "^4.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
ipdb = "^0.13.9"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
